<resources>
    <string name="app_name">Sign Printer App</string>

    <!-- Value for the Fragment names -->
    <string name="choose_printable_fragment">Choose Printable</string>
    <string name="create_printable_fragment">Create Printable</string>
    <string name="print_printable_fragment">Print Preview</string>
    <string name="printer_setup_fragment">Setup Printer</string>

    <!-- Value for the Printer Settings on the menu -->
    <string name="action_settings">Printer Settings</string>

    <!-- Values for Labels -->
    <string name="choose_printable_text">Choose Printable Item</string>
    <string name="printer_settings_text">Printer Setup Settings</string>
    <string name="printer_roll_option_text">Roll (DK-2251 / DK-2205 / RD-M01E5 / A4)</string>
    <string name="printer_label_option_text">Label (DK-1201 / DK-1247 / RD-M03E1 / LETTER)</string>
    <string name="printer_status_text">No Printer Connected\nDon\'t have the printer? Use USB.</string>
    <string name="create_printable_text">Please Enter the Following</string>
    <string name="printable_name_text">Button Text</string>
    <string name="printable_header_text">Header Text</string>
    <string name="printable_warning_text">Main Text</string>
    <string name="tap_to_preview_text">Tap to Refresh Preview</string>
    <string name="print_preview_text">Here\'s how your printout will appear\nTap preview to save to a file.</string>
    <string name="use_settings_to_add_printer_text">Use Settings to add Printer</string>
    <string name="use_settings_to_select_roll_text">Use Settings to select Roll</string>

    <!-- Values for Buttons -->
    <string name="printer_connect_button">Connect to Printer</string>
    <string name="printer_cancel_button">Done</string>
    <string name="print_preview_button">Print Preview</string>
    <string name="save_print_preview_button">Save &amp; Print</string>
    <string name="edit_button">Edit</string>
    <string name="cancel_button">Cancel</string>
    <string name="print_button">Print</string>
    <string name="no_printer_button">No Printer</string>
    <string name="no_roll_button">No Roll Selected</string>

    <!-- Values for default printable -->
    <string name="default_header_printable_text">For Your Safety</string>
    <string name="custom_message_button_text">Custom Message</string>

    <string name="social_distancing_warning_text">6 FOOT DISTANCE REQUIRED</string>
    <string name="customer_limits_warning_text">ONE CUSTOMER AT A TIME</string>
    <string name="wash_hands_warning_text">WASH HANDS W/ SOAP &amp; WATER</string>
    <string name="takeout_service_warning_text">TAKE-OUT SERVICE ONLY</string>
    <string name="staff_only_warning_text">STAFF ONLY</string>

    <string name="social_distancing_button_text">Social Distancing</string>
    <string name="customer_limits_button_text">Customer Limits</string>
    <string name="wash_hands_button_text">Hand Washing</string>
    <string name="takeout_service_button_text">Takeout Only</string>
    <string name="staff_only_button_text">Staff Only</string>
</resources>
