<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectPrintableFragment">

    <TextView
        android:id="@+id/create_printable_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_printable_text"
        app:layout_constraintBottom_toTopOf="@+id/parent_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9" />

    <LinearLayout
        android:id="@+id/parent_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:id="@+id/creation_options_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/input_fields_layout"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/buttonText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:gravity="center_horizontal"
                    android:hint="@string/printable_name_text"
                    android:inputType="textAutoCorrect|textMultiLine"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/headerText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="center_horizontal"
                    android:hint="@string/printable_header_text"
                    android:inputType="textAutoCorrect|textMultiLine"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/warningText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:ems="10"
                    android:enabled="false"
                    android:gravity="center_horizontal"
                    android:hint="@string/printable_warning_text"
                    android:inputType="textAutoCorrect|textMultiLine"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/create_print_preview_layout"
                android:layout_width="wrap_content"
                android:layout_height="384dp"
                android:layout_margin="10dp"
                android:orientation="vertical"></LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/cancel_create_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:text="@string/cancel_button" />

            <Button
                android:id="@+id/save_and_print_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:enabled="false"
                android:text="@string/save_print_preview_button" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>