<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SelectPrintableFragment">

    <TextView
        android:id="@+id/printer_settings_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/printer_settings_text"
        app:layout_constraintBottom_toTopOf="@id/printer_options_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/printer_options_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.55"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:id="@+id/printer_selector_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <RadioGroup
                android:id="@+id/printer_selection_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/connection_selector_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <RadioGroup
                android:id="@+id/connection_selection_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/paper_type"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_option_roll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/printer_roll_option_text" />

            <RadioButton
                android:id="@+id/radio_option_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/printer_label_option_text" />
        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/printer_status_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/printer_status_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printer_options_layout"
        app:layout_constraintVertical_bias="0.24000001" />

    <Button
        android:id="@+id/printer_connect_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:text="@string/printer_connect_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/printer_options_layout"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/printer_cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:text="@string/printer_cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/printer_options_layout"
        app:layout_constraintVertical_bias="0.45" />

</android.support.constraint.ConstraintLayout>