<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PrintPrintableFragment">

    <TextView
        android:id="@+id/print_preview_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/print_preview_text"
        app:layout_constraintBottom_toTopOf="@id/print_preview_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/print_preview_layout"
        android:layout_width="match_parent"
        android:layout_height="416dp"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.56">

    </LinearLayout>

    <LinearLayout
        android:id="@+id/print_preview_buttons_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/print_preview_layout"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:text="@string/cancel_button" />

        <Button
            android:id="@+id/edit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="56dp"
            android:text="@string/edit_button" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/print_count_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="56dp"
                android:ellipsize="start"
                android:ems="3"
                android:inputType="number"
                android:numeric="integer"
                android:selectAllOnFocus="true"
                android:text="1" />

            <Button
                android:id="@+id/print_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="56dp"
                android:text="@string/print_button" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>